syntax = "proto3";

option java_multiple_files = true;
option java_package = "Entry_BE_Assignment.auth_server.grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc ValidateToken (TokenRequest) returns (UserResponse);
}

message TokenRequest {
  string token = 1;  // JWT 토큰
}

message UserResponse {
  int64 userId = 1;
  string username = 2;
  string email = 3;
  string role = 4;
}
